--- a/index.html
+++ b/index.html
@@ -2609,7 +2609,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     <td width="164" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td></tr>
   <tr align="left">
     <td height="82">
-      <p class="WordSection1">2. Two papers accepted to ICLR 2021! I was invited to be Program co-Chair of ICPR 2022! </p></td>
+      <p class="WordSection1">2. Two papers accepted to CVPR 2021! I was invited to be Program co-Chair of ICPR 2022! </p></td>
     </tr>
   <tr align="left">
     <td height="78">
@@ -2827,9 +2827,10 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">137. Mingqing Xiao, Shuxin Zheng, Chang Liu, <u>Zhouchen Lin</u>, and Tie-Yan Liu, <em>Invertible Rescaling Network and Its Extension</em>s, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></span></p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">136. Xiangtai Li, Xia Li, Ansheng You, Li Zhang, Guangliang Cheng, Kuiyuan Yang, Yunhai Tong, <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">and <u>Zhouchen Lin</u></span>, <em>Towards Efficient Scene Understanding via Squeeze
-  Reasoning</em>, submitted to IEEE Transactions on Image Processing. </span></span></p>
-<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">135. Xiaoqin Zhang, Jingjing Zheng, Li Zhao, Zhengyuan Zhou, and <u>Zhouchen Lin</u>, <em>Tensor Recovery with Weighted Tensor Average Rank</em>, submitted to IEEE T. Neural Networks and Learning Systems. </span></span></p>
+  Reasoning</em>, submitted to IEEE Trans. Image Processing. </span></span></p>
+<p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">135. Xiaoqin Zhang, Jingjing Zheng, Li Zhao, Zhengyuan Zhou, and <u>Zhouchen Lin</u>, <em>Tensor Recovery with Weighted Tensor Average Rank</em>, submitted to IEEE Trans. Neural Networks and Learning Systems. </span></span></p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">134. Hanyuan Hang, Yuchao Cai. Hanfang Yang, Biao Li, and <u>Zhouchen Lin</u>, <em>Optimal Class-Imbalanced Learning with Bagged Nearest Neighbor Classifiers</em>, submitted to J. Machine Learning Research.</span></span></p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">133. Risheng Liu,  Jiaxin Gao, Jin Zhang, Deyu Meng, and <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>, <em>Investigating Bi-Level Optimization for Learning and Vision from a Unified Perspective: A Survey and Beyond</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</p>
 <p class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">132. Jian Lu, Chen Xu, Zhenwei Hu, Xiaoxia Liu, Qingtang Jiang, Deyu Meng, and <u>Zhouchen Lin</u>, <em>Denoising of Magnetic Resonance Images by a New Non-Local Low-Rank Regularization Method</em>, submitted to IEEE Trans. <span class="STYLE12" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">Image Processing</span>. </p>
@@ -2863,9 +2864,8 @@ for Graph Convolutional Networks</em>, submitted to Machine Learning.
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">117. Qigong Sun, Xiufang Li, Fanhua Shang, 
 Hongying Liu, Kang Yang, Licheng Jiao, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen 
-Lin</u></span>, <em>Model  Decomposition and Acceleration for Quantized Neural 
-Network</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">submitted to 
-IEEE Trans. Pattern Analysis and Machine Intelligence, major revision</span>. </span></p>
+Lin</u></span>, <em>Quantized Neural Networks via {−1, +1} Encoding Decomposition and Acceleration</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">submitted to 
+IEEE Trans. Image Processing</span>. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">116. Huan Li, Cong Fang, WotaoYin, and 
     <u>Zhouchen Lin</u>, <em>Near Optimal Complexities of Distributed Accelerated 
@@ -4673,7 +4673,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Mar. 5, 2021. Number of visitors since March 1, 2010:     
+was last updated on Mar. 11, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
