--- a/index.html
+++ b/index.html
@@ -2609,7 +2609,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     <td width="164" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td></tr>
   <tr align="left">
     <td height="82">
-      <p class="WordSection1">2. Two papers accepted to CVPR 2021! I was invited to be Program co-Chair of ICPR 2022! </p></td>
+      <p class="WordSection1">2. I was invited to be Area Chair of NeurIPS 2021! Two papers accepted to CVPR 2021! I was invited to be Program co-Chair of ICPR 2022! </p></td>
     </tr>
   <tr align="left">
     <td height="78">
@@ -2845,7 +2845,7 @@ Papers:   <o:p></o:p></span></u></b></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">125. Xingyu Xie, Jianlong Wu, Guangcan Liu, and <u>Zhouchen Lin</u>, <em>SSCNet: Learning-based Subspace Clustering</em>, submitted to 中国科学. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">124. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: New Data Dependent Tensor Rank</em>, submitted to Machine Learning.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">124. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: New Data Dependent Tensor Rank</em>, submitted to Machine Learning, minor revision.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">123. Xiaoqin Zhang, Jingjing Zheng, Di Wang, Guiying Tang, Zhengyuan Zhou, and <u>Zhouchen Lin</u>, <em>Structural Sparsity Optimization with Non-Convex Surrogates: A Unified Algorithmic Framework</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -3475,7 +3475,9 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">20. 12 paper submitted to ICML 2021.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">21. Two papers submitted to ICCV 2021.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">20. 12 papers submitted to ICML 2021.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">19. One paper submitted to SIGIR 2021.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4199,11 +4201,12 @@ granted)</span></p>
 <p>16. (202010080428.7) 神经网络模型的训练方法和装置[三星]</p>
 <p>17. (202010189225.1) 一种基于偏微分算子的等变卷积网络模型的图像分类方法</p>
 <p>18. (202010244367.3) 基于凸多面体分段线性分类的二叉划分树车牌识别方法[之江]</p>
-<p>19. （202010876709.3） 基于稀疏编码的深度学习网络结构搜索的图像识别方法</p>
-<p>20. （202010960192.6）基于可学习可微分矩阵逆及矩阵分解的图像恢复方法</p>
-<p>21. （202011012138.5）基于偏微分算子的广义等变卷积网络模型的图像分类方法 </p>
-<p>22. （PCT/CN2020/084650）一种基于偏微分算子的等变卷积网络模型的图像分类方法[国际专利]</p>
-<p>23. （PCT/CN2020/132017）基于偏微分算子的广义等变卷积网络模型的图像分类方法[国际专利]</p>
+<p>19. (202010876709.3) 基于稀疏编码的深度学习网络结构搜索的图像识别方法</p>
+<p>20. (202010960192.6) 基于可学习可微分矩阵逆及矩阵分解的图像恢复方法</p>
+<p>21. (202011012138.5) 基于偏微分算子的广义等变卷积网络模型的图像分类方法 </p>
+<p>22. (PCT/CN2020/084650) 一种基于偏微分算子的等变卷积网络模型的图像分类方法[国际专利]</p>
+<p>23. (PCT/CN2020/132017) 基于偏微分算子的广义等变卷积网络模型的图像分类方法[国际专利]</p>
+<p>24. (202110288109X)  基于偏微分算子的等变3D卷积网络的3D形状图像分类方法</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
 Activities:   
         <o:p></o:p>
@@ -4282,7 +4285,8 @@ Shenzhen.</p>
 Reviewer/Chair to Conferences:   
     <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICPR 2022  
-(<strong>Program Co-Chair</strong>), ICML 2021 (<strong>Area Chair</strong>), IJCAI 2021 (<strong>Area Chair</strong>, <strong>Video Competition Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
+(<strong>Program Co-Chair</strong>), NIPS 
+2021 (<strong>Area Chair</strong>), ICML 2021 (<strong>Area Chair</strong>), IJCAI 2021 (<strong>Area Chair</strong>, <strong>Video Competition Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
 (<strong>Area Chair</strong>), ACML 2020 (<strong>Area Chair</strong>), NIPS 
 2020 (<strong>Area Chair</strong>), ICPR 2020 (<strong>Track Chair</strong>), ICML 2020 (<strong>Area Chair</strong>), IJCAI 2020 (<strong>Area Chair</strong>), CVPR 2020 
 (<strong>Area Chair</strong>), AAAI 2020 (<strong>Area Chair</strong>), NIPS 
@@ -4673,7 +4677,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Mar. 11, 2021. Number of visitors since March 1, 2010:     
+was last updated on Mar. 20, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
