--- a/index.html
+++ b/index.html
@@ -2609,7 +2609,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     <td width="164" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td></tr>
   <tr align="left">
     <td height="82">
-      <p class="WordSection1">2. I was invited to be Area Chair of NeurIPS 2021! Two papers accepted to CVPR 2021! I was invited to be Program co-Chair of ICPR 2022! </p></td>
+      <p class="WordSection1">2. I was invited to be Area Chair of NeurIPS 2021! One paper accepted to JMLR! Two papers accepted to CVPR 2021! I was invited to be Program co-Chair of ICPR 2022! </p></td>
     </tr>
   <tr align="left">
     <td height="78">
@@ -2842,37 +2842,37 @@ Papers:   <o:p></o:p></span></u></b></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">125. Xingyu Xie, Jianlong Wu, Guangcan Liu, and <u>Zhouchen Lin</u>, <em>SSCNet: Learning-based Subspace Clustering</em>, submitted to 中国科学. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">124. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: New Data Dependent Tensor Rank</em>, submitted to Machine Learning, minor revision.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">124. Xiaoqin Zhang, Jingjing Zheng, Di Wang, Guiying Tang, Zhengyuan Zhou, and <u>Zhouchen Lin</u>, <em>Structural Sparsity Optimization with Non-Convex Surrogates: A Unified Algorithmic Framework</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">123. Xiaoqin Zhang, Jingjing Zheng, Di Wang, Guiying Tang, Zhengyuan Zhou, and <u>Zhouchen Lin</u>, <em>Structural Sparsity Optimization with Non-Convex Surrogates: A Unified Algorithmic Framework</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">123. Zhengyang Shen, Yibo Yang, <u>Zhouchen Lin</u>, and Jinwen Ma, <em>Newton Design: Designing CNNs with the Family of Newton’s Methods</em>, submitted to SCIENCE CHINA Information Sciences. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">122. Zhengyang Shen, Yibo Yang, <u>Zhouchen Lin</u>, and Jinwen Ma, <em>Newton Design: Designing CNNs with the Family of Newton’s Methods</em>, submitted to SCIENCE CHINA Information Sciences. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">122. Risheng Liu,  Zhu Liu, Pan Mu, <u>Zhouchen Lin</u>, Xin Fan, Zhongxuan Luo, <em>Investigating Image Propagations from Optimization Perspective: Modules, Control Mechanisms and Applications</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence, major revision. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">121. Risheng Liu,  Zhu Liu, Pan Mu, <u>Zhouchen Lin</u>, Xin Fan, Zhongxuan Luo, <em>Investigating Image Propagations from Optimization Perspective: Modules, Control Mechanisms and Applications</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence, major revision. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">121. Hanyuan Hang, Yuchao Cai, Hanfang Yang, and <u>Zhouchen Lin</u>, <em>Density-based Forest Clustering</em>, submitted to IEEE Trans. Knowledge and Data Engineering.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">120. Hanyuan Hang, <u>Zhouchen Lin</u>, Xiaoyu Liu, and Hongwei Wen, <em>Histogram Transform Ensembles for Large-scale Regression</em>, submitted to J. Machine Learning Research. </span></p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">119. Hanyuan Hang, Yuchao Cai, Hanfang Yang, and <u>Zhouchen Lin</u>, <em>Density-based Forest Clustering</em>, submitted to IEEE Trans. Knowledge and Data Engineering.</span></p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">118. Ke Sun, 
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">120. Ke Sun, 
 Zhanxing Zhu, and <u>Zhouchen Lin</u>, <em>Multi-Stage Self-Supervised Learning 
 for Graph Convolutional Networks</em>, submitted to Machine Learning. 
 </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">117. Qigong Sun, Xiufang Li, Fanhua Shang, 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">119. Qigong Sun, Xiufang Li, Fanhua Shang, 
 Hongying Liu, Kang Yang, Licheng Jiao, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen 
 Lin</u></span>, <em>Quantized Neural Networks via {−1, +1} Encoding Decomposition and Acceleration</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">submitted to 
 IEEE Trans. Image Processing</span>. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">116. Huan Li, Cong Fang, WotaoYin, and 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">118. Huan Li, Cong Fang, WotaoYin, and 
     <u>Zhouchen Lin</u>, <em>Near Optimal Complexities of Distributed Accelerated 
 Gradient Method</em>, submitted to IEEE Trans. Automatic Control.</span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">115. Huan Li, Cong 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">117. Huan Li, Cong 
   Fang, and <u>Zhouchen Lin</u>, <em>Convergence Rates Analysis of the Quadratic 
     Penalty Method and Its Applications to Decentralized Distributed 
     Optimization</em>, submitted to SIAM J. Optimization. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">116. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: New Data Dependent Tensor Rank</em>, Machine Learning, accepted.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">115. Hanyuan Hang, <u>Zhouchen Lin</u>, Xiaoyu Liu, and Hongwei Wen, <em>Histogram Transform Ensembles for Large-scale Regression</em>, J. Machine Learning Research, accepted. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">114. Jia Li, Mingqing Xiao, Cong Fang, Yue Dai, 
 Chao Xu, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen 
 Lin</u></span>, <em>Training Deep Neural Networks by Lifted Proximal Operator 
@@ -4676,7 +4676,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Mar. 26, 2021. Number of visitors since March 1, 2010:     
+was last updated on Apr. 11, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
