--- a/index.html
+++ b/index.html
@@ -2600,12 +2600,10 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     <td width="606" height="91" align="left">
       <p class="WordSection1">1. <a href="https://zhouchenlin.github.io/Recruitment.htm">My 
       group is<span class="STYLE26"> recruiting </span>tenure-track 
-      faculties</a> and PostDocs (<a href="https://zhouchenlin.github.io/Academic.htm">academic</a> 
-      (annual salary ~USD40K) or <a href="https://zhouchenlin.github.io/Radiawave.htm">industrial</a>). 
+      faculties</a> and PostDocs (<a href="https://zhouchenlin.github.io/Academic.htm">academic</a>, 
+      annual salary ~USD40K). 
       <a href="https://zhouchenlin.github.io/Recruitment%20at%20Zhijiang%20LAB.htm">My 
-      lab at Zhejiang LAB is also recruiting</a> Researchers and PostDocs. Beijing Academy of Artificial Intelligence is also recruiting <a href="https|//mp.weixin.qq.com/s/Xc90PkrLUSUE03GhIflQcA">PostDocs</a> in machine learning (annual salary USD70K+)! <a href="https://zhouchenlin.github.io/Recruitment%20at%20Samsung%20AI%20Lab.htm">Samsung 
-      AI Lab is also recruiting</a> top-caliber researchers with strong 
-      expertise in machine learning! </p></td>
+      lab at Zhejiang LAB is also recruiting</a> Researchers and PostDocs. </p></td>
     <td width="164" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td></tr>
   <tr align="left">
     <td height="82">
@@ -3472,7 +3470,9 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">23. One paper submitted to ECML/PKDD 2021.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. 15 papers submitted to NeurIPS 2021.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">23. One paper submitted to ECML/PKDD 2021.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">122. Two papers submitted to ICCV 2021.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4678,7 +4678,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on May 13, 2021. Number of visitors since March 1, 2010:     
+was last updated on June 11, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
