--- a/index.html
+++ b/index.html
@@ -2869,7 +2869,7 @@ Gradient Method</em>, submitted to IEEE Trans. Automatic Control.</span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">117. Shiping Wang, Zhaoliang Chen, Shide Du, and <u>Zhouchen Lin</u>, <em>Learning Deep Sparse Regularizers with Applications to Multi-View Clustering and Semi-Supervised Classification</em>, IEEE Trans. Pattern Analysis and Machine Intelligence, accepted. [<a href="Publications/2021-TPAMI-DSRL.pdf">pdf</a>]  </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">116. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: New Data Dependent Tensor Rank</em>, Machine Learning, accepted. [<a href="Publications/2021-ML-Tensor Q-Rank.pdf">pdf</a>]</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">116. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: New Data Dependent Tensor Rank</em>, Machine Learning, 110(7): 1867-1900 (2021). [<a href="Publications/2021-ML-Tensor Q-Rank.pdf">pdf</a>]</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">115. Hanyuan Hang, <u>Zhouchen Lin</u>, Xiaoyu Liu, and Hongwei Wen, <em>Histogram Transform Ensembles for Large-scale Regression</em>, J. Machine Learning Research, accepted. [<a href="Publications/2021-JMLR-Histogram Transform Ensembles for Large-scale Regression.pdf">pdf</a>] </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4289,7 +4289,7 @@ Shenzhen.</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">25. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICPR 2022  
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICLR 2022 (<strong>Area Chair</strong>), ICPR 2022  
 (<strong>Program Co-Chair</strong>), NIPS 
 2021 (<strong>Area Chair</strong>), ICML 2021 (<strong>Area Chair</strong>), IJCAI 2021 (<strong>Area Chair</strong>, <strong>Video Competition Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
 (<strong>Area Chair</strong>), ACML 2020 (<strong>Area Chair</strong>), NIPS 
@@ -4682,7 +4682,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on July 3, 2021. Number of visitors since March 1, 2010:     
+was last updated on July 13, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
