--- a/index.html
+++ b/index.html
@@ -3474,7 +3474,7 @@ No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 Conference Papers:<o:p></o:p></span></u></b></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. 15 papers submitted to NeurIPS 2021.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">123. Two papers submitted to ICCV 2021.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">123. Huasong Zhong, Jianlong Wu, Chong Chen, Minghua Deng, Jianqiang Huang, Xian-Sheng Hua, Liqiang Nie, and <u>Zhouchen Lin</u>, <em>Graph Contrastive Clustering</em>, ICCV 2021. [<a href="Publications/2021-ICCV-GCC.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">122. Yifei Wang, Yisen Wang, Jiansheng Yang and <u>Zhouchen Lin</u>,	<em>Reparameterized Sampling for Generative Adversarial Networks,</em> ECML/PKDD 2021. [<a href="Publications/2021-ECML-PKDD-RS-GAN.pdf">pdf</a>][<a href="Publications/2021-ECML-PKDD-RS-GAN-supp.pdf">Supplementary Material</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4682,7 +4682,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on July 13, 2021. Number of visitors since March 1, 2010:     
+was last updated on July 23, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
